# cli-uni-app

./: .gitignore  PRESENTATION_DISTRIBUTION.md  README.md  cli.py  cli.py.save  constants.py  db.py  for_us  for_us.md  gui.py  guiuniapp.py  messages.py  messages.py.save  pyproject.toml  students.data  test_guiuniapp.py
controllers/: __init__.py  admin_controller.py  gui_student_controller.py  student_controller.py
models/: student.py  subject.py
services/: admin_service.py  student_service.py
utils/: cmd.py  grade_calculator.py  id_generator.py  password.py
